# PCAS-Keepalive

./: .gitignore  PCAS_App_逆向分析报告.md  PCAS_PROTOCOL.md  dump_ds.py  dump_sysconfig.py  ecloud_V3.6.5_macOS_reverse_analysis.md  endpoint_fields.py  extract_cem_packets.py  find_model_fields.py  group_fields.py  tcp_relay_cem.py
pcas_keepalive/: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  config.py  db.py  docker-compose.yml  docker-entrypoint.sh  keepalive.py  main.py  pyproject.toml  tools_dump_device_info.py
pcas_keepalive/docs/: CAPTURE_DESKTOP_SESSION.md  CEM_STREAM_REVERSE.md  CMSS_DESKTOP_PROTOCOL.md  FRIDA_HOOK_GUIDE.md  VDP_GRPC_PROTOCOL.md  ZTEC_CAG_PROTOCOL.md
pcas_keepalive/pcas/: __init__.py  cem_stream.py  client.py  const.py  crypto.py  desktop_session.py  sign.py
pcas_keepalive/pcas/cmss_desktop/: __init__.py  client.py  const.py  cs_action.py  ztec_protocol.py
pcas_keepalive/pcas/vdp_grpc/client/: client_core.proto
pcas_keepalive/pcas/vdp_grpc/common/: broadcast_cmd.proto  common_core.proto  common_messages.proto  common_stream.proto  error_data.proto  stream_message.proto  watermark_policy.proto
pcas_keepalive/pcas/vdp_grpc/service/: service_stream.proto
pcas_keepalive/static/: style.css
pcas_keepalive/templates/: admin_login.html  base.html  dashboard.html  login.html  overview.html  setup.html
pcas_keepalive/templates/partials/: icons.html  machine_card.html
